[tool.poetry]
name = "plumbing-buildfactory"
version = "0.1.0"
description = "BuildFactory pdf take-home computer vision task"
authors = ["Rohan Gupta <gupta.rohan41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
pdfplumber = ">=0.7.4"
streamlit = "^1.44.1"
pypdf = "^5.4.0"
pymupdf = "^1.25.5"
openai = "^1.75.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
